--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.cdnfonts.com/css/adobe-clean" rel="stylesheet" />
+                
     <title>Buildbox | Web Challenge</title>
   </head>
   <body>
